<resources>
    <string name="app_name">育 蕾orz</string>

    <string name="hello_world">Hello world!</string>
    <string name="username">用 户 名</string>
    <string name="nickname">昵 称</string>
    <string name="email">电 子 邮 件</string>
    <string name="password">密 码</string>
    <string name="password_makesure">确 认 密 码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="login">登  陆</string>
    <string name="signup">注  册</string>
    <string name="memorypassword">记住密码</string>
    <string name="autosignin">自动登录</string>
    <string name="forget_password">忘 记 密 码 ?</string>
    <string name="submmit">提 交</string>
    <string name="cancel">取 消</string>
    <string name="back">返 回</string>
    <string name="friend_request">好 友 请 求</string>
    <string name="add_friend">添 加 好 友</string>
    <string name="hint_input_username">请输入用户名</string>
    <string name="hint_input_number">请输入捐赠的种子数</string>
    <string name="donate_success">捐 赠 成 功</string>
    <string name="leftmoney">剩余金币：</string>

    <string name="shot">马 上 拍 照</string>
    <string name="album">从 相 册 中 选 取</string>

    <string name="systemtask">系 统 任 务</string>
    <string name="diytask">自 定 义 任 务</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <string name="header_text">育 蕾</string>
    <string name="child_task_module">玩 转 任 务</string>
    <string name="child_task_history_module">历 史 战 绩</string>
    <string name="child_donate_project_module">公 益 项 目</string>
    <string name="parent_send_wish">发 出 心 愿</string>
    <string name="parent_wish_list">心 愿 清 单</string>
    <string name="parent_donate_info">公 益 项 目</string>

    <string name="all_seed">现 有 种 子</string>
    <string name="donate_seed">历 史 捐 出</string>
    <string name="donate">捐 赠 种 子</string>
    <string name="li">粒</string>

    <string name="child_wishlist_activity_header">父 母 心 愿</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_parent_main">ParentMainActivity</string>
    <string name="title_activity_child_main">ChildMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_parent_setting">ParentSettingActivity</string>
    <string name="title_activity_parent_more_setting">ParentMoreSettingActivity</string>
    <string name="title_activity_parent_add_task">ParentAddTask</string>
    <string name="title_activity_task_info">TaskInfoActivity</string>
    <string name="title_activity_parent_add_system_task">ParentAddSystemTask</string>
    <string name="title_activity_child_wish">ChildWishActivity</string>
    <string name="title_activity_child_diary">ChildDiaryActivity</string>
    <string name="title_activity_child_setting">ChildSettingActivity</string>
    <string name="title_activity_child_donate">ChildDonateActivity</string>
    <string name="title_activity_submit_task">SubmitTaskActivity</string>
    <string name="title_activity_award_task">AwardTaskActivity</string>
    <string name="title_activity_child_wish_list">ChildWishListActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
</resources>
