<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signupactivity_relativelayout_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/signupactivity_relativelayout_2"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip">

        <ImageView
            android:id="@+id/signupactivity_imageview_userimage"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:layout_centerInParent="true"
            android:src="@drawable/circle_mask_style"
            />

        <com.example.pc.myapplication.ViewStyle.CircularImage
            android:id="@+id/signupactivity_circularimage_userimage"
            android:layout_width="70dip"
            android:layout_height="70dip"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/signupactivity_relativelayout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupactivity_relativelayout_2"
        android:layout_marginTop="30dip">

        <EditText
            android:id="@+id/signupactivity_edittext_username"
            android:layout_width="250dip"
            android:layout_height="40dip"
            android:layout_margin="5dip"
            android:textSize="9pt"
            android:textColorHint="@color/login_hint_color"
            android:hint="@string/username"
            android:layout_centerHorizontal="true"
            />

        <EditText
            android:id="@+id/signupactivity_edittext_nickname"
            android:layout_width="250dip"
            android:layout_height="40dip"
            android:layout_margin="5dip"
            android:textSize="9pt"
            android:textColorHint="@color/login_hint_color"
            android:hint="@string/nickname"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/signupactivity_edittext_username"

            />

        <EditText
            android:id="@+id/signupactivity_edittext_email"
            android:layout_width="250dip"
            android:layout_height="40dip"
            android:layout_margin="5dip"
            android:textSize="9pt"
            android:textColorHint="@color/login_hint_color"
            android:hint="@string/email"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/signupactivity_edittext_nickname"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/signupactivity_edittext_password"
            android:layout_width="250dip"
            android:layout_height="40dip"
            android:layout_margin="5dip"
            android:textSize="9pt"
            android:textColorHint="@color/login_hint_color"
            android:hint="@string/password"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"
            android:layout_below="@id/signupactivity_edittext_email"
            />

        <EditText
            android:id="@+id/signupactivity_edittext_password_makesure"
            android:layout_width="250dip"
            android:layout_height="40dip"
            android:layout_margin="5dip"
            android:textSize="9pt"
            android:textColorHint="@color/login_hint_color"
            android:hint="@string/password_makesure"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"
            android:layout_below="@id/signupactivity_edittext_password"
            />

        <RadioGroup
            android:layout_below="@id/signupactivity_edittext_password_makesure"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"

            >

            <RadioButton
                android:id="@+id/signupactivity_radiobutton_male"
                android:layout_marginStart="50dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>

            <RadioButton
                android:id="@+id/signupactivity_radiobutton_female"
                android:layout_marginStart="50dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>

            </RadioGroup>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupactivity_relativelayout_3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dip">

        <Button
            android:id="@+id/signupactivity_button_submmit"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/submmit"
            android:textColor="@color/login_hint_color"
            android:background="@drawable/signin_button_style"
            android:layout_marginStart="10dip"/>

        <Button
            android:id="@+id/signupactivity_button_cancel"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/login_hint_color"
            android:background="@drawable/signin_button_style"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dip"/>

    </RelativeLayout>

</RelativeLayout>